# gpuSW

./: .gitignore  CHANGELOG.md  GPU_ALIGNMENT_FINDINGS.md  LICENSE  README.md  gpu_align.py  gpu_align_stats.json  pyproject.toml
.github/workflows/: ci.yml
benchmarks/: bench_gcups.py
docs/: DESIGN.md  FINDINGS_16S.md  FINDINGS_16S_METAL.md  metal_align_stats_16s.json  metal_bvbrc_validation_stats.json
examples/: dna_exhaustive.py  legacy_16s_gpu_align.py  metal_16s_align.py  metal_bvbrc_validation.py  protein_blosum.py  semiglobal_reads.py
src/gpusw/: __init__.py  _compile.py  _metal.py  aligner.py  cli.py  encode.py  errors.py  kernel.py  matrix.py  metal_kernel.py  reference.py  result.py  scheme.py  schemes.py
src/gpusw/backends/: __init__.py  cuda.py  metal.py
src/gpusw/data/: __init__.py
src/gpusw/data/matrices/: BLOSUM45.txt  BLOSUM50.txt  BLOSUM62.txt  BLOSUM80.txt  BLOSUM90.txt  EDNAFULL.txt  PAM250.txt  PAM30.txt  PAM70.txt  __init__.py
tests/: conftest.py  test_api.py  test_cli.py  test_encode.py  test_gpu_bitexact.py  test_kernel_render.py  test_matrix.py  test_metal_bitexact.py  test_metal_render.py  test_reference_oracle.py  test_scheme_dtype.py
